--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "ag-charts-react": "^11.3.2",
     "amazon-quicksight-embedding-sdk": "^2.10.1",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.3",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "victory": "^37.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
