--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/core": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
     "@reduxjs/toolkit": "^2.7.0",
     "ag-charts-react": "^11.3.2",
     "amazon-quicksight-embedding-sdk": "^2.10.1",
