--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nivo/pie": "^0.99.0",
     "@reduxjs/toolkit": "^2.7.0",
     "ag-charts-react": "^11.3.2",
+    "ag-grid-react": "^34.2.0",
     "amazon-quicksight-embedding-sdk": "^2.10.1",
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
