--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@nivo/bar": "^0.99.0",
     "@nivo/core": "^0.99.0",
+    "@nivo/heatmap": "^0.99.0",
     "@nivo/pie": "^0.99.0",
     "@reduxjs/toolkit": "^2.7.0",
     "ag-charts-react": "^11.3.2",
